# mviz

./: .dir-locals.el  .editorconfig  .gitignore  CHANGELOG.md  LICENSE  README.md  build-release.sh  cabal.project  cabal.project.release  coutput  default.nix  fourmolu.yaml  hie.yaml  mviz.cabal  shell.nix
.fossil-settings/: ignore-glob
.github/workflows/: haskell.yml
app/: Main.hs
lib/: Mviz.hs
lib/Mviz/: Audio.hs  GL.hs  Logger.hs  SDL.hs  Types.hs  UI.hs  Utils.hs  Window.hs
lib/Mviz/Audio/: Client.hs  Types.hs
lib/Mviz/Graphics/: Shader.hs
lib/Mviz/UI/: ConsoleWindow.hs  LogWindow.hs  Types.hs
lib/Mviz/Utils/: Ringbuffer.hs  TSRingbuffer.hs
lib/Mviz/Window/: Events.hs  Types.hs
lib/imgui/: ImGui.hs
lib/imgui/ImGui/: Enums.hs  Frame.hs  GL.hs  ListClipper.hs  Raw.chi  Raw.chs  Raw.chs.c  Raw.chs.h  Raw.dump.chs  Raw.hs  SDL.hs  Structs.hs  Types.hs
lib/imgui/ImGui/Raw/: Context.hs  GL.chs  ListClipper.hs  SDL.chs  Structs.chs  Structs.hs  Types.chs  Types.hs  Utils.hs
lib/imgui/include/: imgui_lib.c
lib/mviz/: Mviz.hs
lib/mviz/Mviz/: Audio.hs  Config.hs  Core.hs  GL.hs  Logger.hs  SDL.hs  Shader.hs  Types.hs  UI.hs  Utils.hs  Watch.hs  Window.hs
lib/mviz/Mviz/Audio/: Client.hs  Inputs.hs  Types.hs
lib/mviz/Mviz/Config/: Types.hs
lib/mviz/Mviz/GL/: Types.hs
lib/mviz/Mviz/Graphics/: Shader.hs
lib/mviz/Mviz/SDL/: Types.hs
lib/mviz/Mviz/Shader/: Types.hs
lib/mviz/Mviz/UI/: AudioWindow.hs  ConsoleWindow.hs  LogWindow.hs  SettingsWindow.hs  Types.hs  UIWindow.hs
lib/mviz/Mviz/Utils/: Audio.hs  Bool.hs  Either.hs  Filesystem.hs  Inputs.hs  Ringbuffer.hs  Time.hs
lib/mviz/Mviz/Window/: Events.hs  Keybinding.hs  Types.hs
nix/: sources.json
temp/: shell.nix
test/: AudioSpec.hs
test/UI/: SettingsWindowSpec.hs
test/Utils/: AudioSpec.hs  EitherSpec.hs
