cabal-version:      3.0
name:               mviz
version:            0.1.0.0
synopsis:           Audio visualizer
description:        Audio visualizer utilizing JACK to visualize the system audio
license:            ISC
license-file:       LICENSE
author:             dxtr
maintainer:         dxtr@bahnhof.se
-- copyright:
category:           audio
build-type:         Simple
extra-doc-files:    README.md, CHANGELOG.md

extra-source-files:
    vendor/imgui/*

common optimize
    ghc-options: -O1

common warnings
    ghc-options: -Wall

common threaded
    ghc-options: -threaded -rtsopts -with-rtsopts=-N 

library imgui
    import: warnings
    exposed-modules:
        ImGui,
        ImGui.GL,
        ImGui.SDL,
        ImGui.ListClipper
    other-modules:
        ImGui.Raw.Structs,
        ImGui.Raw.Types,
        ImGui.Raw.Context,
        ImGui.Raw.ListClipper,
        ImGui.Enums,
        ImGui.Types,
        ImGui.Structs,
        ImGui.Raw

    ghc-options: -O1
    cc-options: -std=c11 -O1 -DCIMGUI_USE_OPENGL3 -DCIMGUI_USE_SDL2 -DIMGUI_DISABLE_OBSOLETE_FUNCTIONS -DIMGUI_DISABLE_OBSOLETE_KEYIO
    cxx-options: -std=c++11 -O1 -DCIMGUI_USE_OPENGL3 -DCIMGUI_USE_SDL2 -DIMGUI_DISABLE_OBSOLETE_FUNCTIONS -DIMGUI_DISABLE_OBSOLETE_KEYIO
    cpp-options: -DIMGUI_DISABLE_OBSOLETE_FUNCTIONS -DIMGUI_DISABLE_OBSOLETE_KEYIO
    cxx-sources:
        vendor/imgui/imgui.cpp
        vendor/imgui/imgui_demo.cpp
        vendor/imgui/imgui_draw.cpp
        vendor/imgui/imgui_tables.cpp
        vendor/imgui/imgui_widgets.cpp
        vendor/imgui/backends/imgui_impl_opengl3.cpp
        vendor/imgui/backends/imgui_impl_sdl2.cpp

    include-dirs: vendor/imgui
--    other-extensions: Strict
    build-depends:
        base ^>=4.18.0.0,
        text ^>=2.0.1,
        sdl2,
        StateVar,
        inline-c,
        inline-c-cpp,
        unliftio,
        unliftio-core,
        containers
    pkgconfig-depends: gl, glew, sdl2

    hs-source-dirs:   lib/imgui
    default-language: GHC2021
        
library
    import:           warnings
    exposed-modules:  Mviz
    other-modules:
        Mviz.Audio,
        Mviz.Audio.Client,
        Mviz.Audio.Types,
        Mviz.GL,
        Mviz.GL.Types,
        Mviz.Graphics.Shader,
        Mviz.Logger,
        Mviz.SDL,
        Mviz.SDL.Types,
        Mviz.Types,
        Mviz.UI,
        Mviz.UI.Types,
        Mviz.UI.UIWindow,
        Mviz.UI.LogWindow,
        Mviz.Utils,
        Mviz.Utils.Ringbuffer,
        Mviz.Window,
        Mviz.Window.Types,
        Mviz.Window.Events

--    other-extensions: Strict
    build-depends:
        base ^>=4.18.0.0,
        OpenGL,
        StateVar,
        async,
        bytestring,
        containers,
        explicit-exception,
        hashable,
        imgui,
        jack,
        monad-logger,
        mtl,
        sdl2,
        stm,
        template-haskell,
        text,
        time,
        timerep,
        transformers,
        unliftio,
        unliftio-core,
        unordered-containers,
        vector

    hs-source-dirs:   lib/mviz
    default-language: GHC2021

executable mviz
    -- Import common warning flags.
    import:           warnings
    import:           threaded

    -- .hs or .lhs file containing the Main module.
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:

    -- Other library packages from which modules are imported.
    build-depends:
        base ^>=4.18.0.0,
        mviz

    -- Directories containing source files.
    hs-source-dirs:   app

    -- Base language which the package is written in.
    default-language: GHC2021
    ghc-options: -O1

test-suite mviz-test
    -- Import common warning flags.
    import:           warnings

    -- Base language which the package is written in.
    default-language: GHC2021

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:

    -- The interface type and version of the test suite.
    type:             exitcode-stdio-1.0

    -- Directories containing source files.
    hs-source-dirs:   test

    -- The entrypoint to the test suite.
    main-is:          Main.hs

    -- Test dependencies.
    build-depends:
        base ^>=4.18.0.0,
        mviz
