cabal-version:      3.4
name:               mviz
version:            0.1.0.0
synopsis:           Audio visualizer
description:        Audio visualizer utilizing JACK to visualize the system audio
license:            ISC
license-file:       LICENSE
author:             dxtr
maintainer:         dxtr@bahnhof.se
-- copyright:
category:           audio
build-type:         Simple
extra-doc-files:    README.md, CHANGELOG.md

source-repository head
    type: git
    location: https://github.com/dxtr/mviz

common warnings
    ghc-options: -Wall

common threaded
    ghc-options: -threaded -rtsopts -with-rtsopts=-N 

library imgui
    import: warnings
    exposed-modules:
        ImGui,
        ImGui.GL,
        ImGui.SDL,
        ImGui.ListClipper
    other-modules:
        ImGui.Raw.Structs,
        ImGui.Raw.Types,
        ImGui.Raw.Context,
        ImGui.Raw.ListClipper,
        ImGui.Enums,
        ImGui.Types,
        ImGui.Structs,
        ImGui.Raw

    cc-options: -std=c11 -DCIMGUI_USE_OPENGL3 -DCIMGUI_USE_SDL2 -DIMGUI_DISABLE_OBSOLETE_FUNCTIONS -DIMGUI_DISABLE_OBSOLETE_KEYIO
    cxx-options: -std=c++11 -DCIMGUI_USE_OPENGL3 -DCIMGUI_USE_SDL2 -DIMGUI_DISABLE_OBSOLETE_FUNCTIONS -DIMGUI_DISABLE_OBSOLETE_KEYIO
    cpp-options: -DIMGUI_DISABLE_OBSOLETE_FUNCTIONS -DIMGUI_DISABLE_OBSOLETE_KEYIO
    cxx-sources:
        vendor/imgui/imgui.cpp
        vendor/imgui/imgui_demo.cpp
        vendor/imgui/imgui_draw.cpp
        vendor/imgui/imgui_tables.cpp
        vendor/imgui/imgui_widgets.cpp
        vendor/imgui/backends/imgui_impl_opengl3.cpp
        vendor/imgui/backends/imgui_impl_sdl2.cpp

    include-dirs: vendor/imgui
--    other-extensions: Strict
    build-depends:
        base ^>=4.18.0.0,
        text ^>=2.0.1,
        sdl2,
        StateVar,
        inline-c >= 0.9.1 && < 0.10,
        inline-c-cpp >= 0.5.0 && < 0.6,
        unliftio >= 0.2.25 && < 0.3,
        unliftio-core >= 0.2.1 && < 0.3,
        containers
    pkgconfig-depends: gl >= 1.2, sdl2 >= 2.0.20 && < 3.0.0

    hs-source-dirs:   lib/imgui
    default-language: GHC2021
        
library
    import:           warnings
    autogen-modules: Paths_mviz
    exposed-modules:
        Mviz,
        Mviz.Utils.Audio,
        Paths_mviz
    other-modules:
        Mviz.Audio,
        Mviz.Audio.Inputs,
        Mviz.Audio.Client,
        Mviz.Audio.Types,
        Mviz.GL,
        Mviz.GL.Types,
        Mviz.Graphics.Shader,
        Mviz.Logger,
        Mviz.SDL,
        Mviz.SDL.Types,
        Mviz.Types,
        Mviz.UI,
        Mviz.UI.Types,
        Mviz.UI.UIWindow,
        Mviz.UI.LogWindow,
        Mviz.UI.SettingsWindow,
        Mviz.Utils,
        -- Mviz.Utils.Audio,
        Mviz.Utils.Ringbuffer,
        Mviz.Utils.Time,
        Mviz.Window,
        Mviz.Window.Types,
        Mviz.Window.Events

--    other-extensions: Strict
    build-depends:
        base ^>=4.18.0.0,
        OpenGL >= 3.0.3 && < 3.1,
        StateVar >= 1.2.2 && < 1.3,
        async >= 2.2.4 && < 2.3,
        bytestring >= 0.11.5 && < 0.12,
        containers >= 0.6.7 && < 0.7,
        explicit-exception >= 0.2 && < 0.3,
        hashable >= 1.4.3 && < 1.5,
        mviz:imgui,
        jack >= 0.7.2 && < 0.8,
        monad-logger >= 0.3.40 && < 0.4,
        mtl >= 2.3.1 && < 2.4,
        sdl2 >= 2.5.5 && < 2.6,
        stm >= 2.5.1 && < 2.6,
        template-haskell >= 2.20.0 && < 2.21,
        text >= 2.0.2 && < 2.1,
        time >= 1.12.2 && < 1.13,
        transformers >= 0.6.1 && < 0.7,
        unliftio >= 0.2.25 && < 0.3,
        unliftio-core >= 0.2.1 && < 0.3,
        unordered-containers >= 0.2.19 && < 0.3,
        vector >= 0.13.1 && < 0.14,
        array >= 0.5.5 && < 0.6,
        comfort-array >= 0.5.3 && < 0.6,
        comfort-fftw >= 0.0.0 && < 0.1

    hs-source-dirs:   lib/mviz
    default-language: GHC2021

executable mviz
    -- Import common warning flags.
    import:           warnings
    import:           threaded

    -- .hs or .lhs file containing the Main module.
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:

    -- Other library packages from which modules are imported.
    build-depends:
        base ^>=4.18.0.0,
        mviz:mviz

    -- Directories containing source files.
    hs-source-dirs:   app

    -- Base language which the package is written in.
    default-language: GHC2021

test-suite mviz-test
    -- Import common warning flags.
    import:           warnings

    -- Base language which the package is written in.
    default-language: GHC2021

    -- Modules included in this executable, other than Main.
    other-modules:
        Utils.AudioSpec,
        Paths_mviz

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:

    -- The interface type and version of the test suite.
    type:             exitcode-stdio-1.0

    -- Directories containing source files.
    hs-source-dirs:   test

    -- The entrypoint to the test suite.
    main-is:          Spec.hs

    -- Test dependencies.
    build-tool-depends: hspec-discover:hspec-discover
    build-depends:
        base ^>=4.18.0.0,
        hspec,
        mviz
